examples/public/js/index.js
// 1. promise
// Promise.reject('promise rej') // error
// Promise.reject('promise rej').catch(error => {
//   console.log(error, 'error') // catch error
// })
// 2. normal
let vue = vanilla + react
console.log(vue)
